# Ableton_MCP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
Gateway_Remote/: __init__.py  action_registry.py  action_validation.py  chain_tools.py  liveapi_tools.py  parameter_resolver.py
ableton_chain_mcp/: __init__.py  constants.py  envelope.py  error_codes.py  feature_flags.py  logging_utils.py  observability.py  policy.py  schema_loader.py  tool_schemas.py
ableton_chain_mcp/bridge/: gateway_client.py  main.py  server.py
ableton_chain_mcp/bridge/adapters/: __init__.py  lom_adapter.py
ableton_chain_mcp/mcp_server/: bridge_client.py  main.py  orchestrator.py  server.py  supervisor.py  tool_registry.py
ableton_chain_mcp/mcp_server/transports/: __init__.py  sse.py  stdio.py
docs/: OPERATIONS.md
schema/: seed_actions.json
scripts/: llm_chain_harness.py
tests/: test_bridge_server.py  test_chain_tools.py  test_llm_chain_harness.py  test_mcp_server.py  test_orchestrator.py  test_parameter_resolver.py  test_schema_loader.py  test_tool_registry.py  test_tool_schemas.py
